# asus_numberpad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: layouts.json
control/: postinst  prerm
debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
include/: i2c_device.h  layout.h  numberpad.h  touchpad_detect.h
src/: i2c_device.cpp  layout.cpp  main.cpp  numberpad.cpp  touchpad_detect.cpp
systemd/: numberpad.service
